function host image: metaspace is a share of the container (FC_JVM_METASPACE_PERCENT, default 50) and the heap is what is left
The cap used to be added on top of -Xmx: 4.8 GiB of permission in a 4 GiB
container. Now heap + direct + metaspace + reserve <= limit for every row of a
tested table; unset (fc-server) is byte-identical to before; a value outside
10-70 refuses to start. /ready reports the split. Re-measured at 50%: the fence
binds at 226 typical functions in 2 GiB and 458 in 4 GiB (predicted 225/458),
no OOM-kill; 100 typical functions under load at 2 GiB/2 CPUs: 11.7k req/s,
p99 82 ms, peak heap 212 of 591 MB, no OutOfMemoryError.

Owner ruling 2026-09-21.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>